# can-you-peer-me

./: README.md  flake.nix  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  messages.rs  sync.rs
src/assets/: 528669__kjose__metalpot_edgeslap.flac  528670__kjose__metalpot_edgeslap-strong.flac  528671__kjose__metalpot_edgeslap-soft.flac  528672__kjose__metalpot-sideslap_mute.flac  528673__kjose__metalpot_fingertap2.flac  528674__kjose__metalpot_fingertap1.flac  528675__kjose__metalpot_edgeslap_mute.flac  528676__kjose__metalpot_edgeslap_muff.flac  528677__kjose__metalpot_mutedfingertap1.flac  528679__kjose__metalpot_sideslap.flac  528680__kjose__metalpot_mutedfingertap2.flac  528681__kjose__metalpot_strongfingertap1.flac  528682__kjose__metalslap_rim.flac  528683__kjose__metalpot_strongfingertap2.flac
