[package]
name = "can-you-peer-me"
version = "0.1.0"
description = "A Tauri App"
authors = ["sandreae"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "can_you_peer_me_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
p2panda-core = { git = "https://github.com/p2panda/p2panda", rev = "312fe069492db43bcd478835c16b418ed2525bd0" }
p2panda-discovery = { git = "https://github.com/p2panda/p2panda", rev = "312fe069492db43bcd478835c16b418ed2525bd0", features = ["mdns"] }
p2panda-net = { git = "https://github.com/p2panda/p2panda", rev = "312fe069492db43bcd478835c16b418ed2525bd0" }
p2panda-store = { git = "https://github.com/p2panda/p2panda", rev = "312fe069492db43bcd478835c16b418ed2525bd0" }
p2panda-stream = { git = "https://github.com/p2panda/p2panda", rev = "312fe069492db43bcd478835c16b418ed2525bd0" }
p2panda-sync = { git = "https://github.com/p2panda/p2panda", rev = "312fe069492db43bcd478835c16b418ed2525bd0", features = ["log-sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.43.0"
anyhow = "1.0.95"
thiserror = "2.0.11"

